# spm

./: CMakeLists.txt  Qt_toolBox.vcxproj.filters  README.md  qt_toolbox.cpp  qt_toolbox.h  qt_toolbox.qrc  surgicaldetection.cpp  surgicalidentification.cpp  surgicalposition.cpp
old/: CMakeListsold.txt
old/Build_old/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj
old/Build_old/src/: INSTALL.vcxproj  SurgicalProcessIdentificationSystem.vcxproj  moc_qt_toolbox.cpp_parameters  surgicalposition.cpp  surgicalposition.h
old/Build_old/src/SurgicalProcessIdentificationSystem.dir/Debug/Surgical.26A91706.tlog/: CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.write.1.tlog  link.read.1.tlog
old/Build_old/x64/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
old/Build_old/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: custombuild.read.1.tlog
old/Build_old/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog
old/Build_old1005/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  ZERO_CHECK.vcxproj
old/Build_old1005/src/: SurgicalProcessIdentificationSystem.vcxproj  SurgicalProcessIdentificationSystem.vcxproj.filters  log_micoscope.csv  moc_surgicaldetection.cpp_parameters  moc_surgicalposition.cpp_parameters  output.wmv  surgicalidentification.cpp  surgicalidentification.h  test.csv
old/Build_old1005/src/Debug/: SurgicalProcessIdentificationSystem.exp  SurgicalProcessIdentificationSystem.lib
old/Build_old1005/src/SurgicalProcessIdentificationSystem.dir/Debug/Surgical.26A91706.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SurgicalProcessIdentificationSystem.write.1u.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
old/Build_old1005/x64/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
old/Build_old1005/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog
old/Build_old1005/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.read.1.tlog
old/Build_old1011/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  SurgicalProcessIdentificationSystem.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
old/Build_old1011/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  SurgicalProcessIdentificationSystem.vcxproj  cmake_install.cmake  moc_qt_toolbox.cpp  moc_qt_toolbox.cpp_parameters  moc_surgicalidentification.cpp_parameters
old/Build_old1011/src/Debug/: SurgicalProcessIdentificationSystem.exp  SurgicalProcessIdentificationSystem.lib
old/Build_old1011/src/Release/: SurgicalProcessIdentificationSystem.exp  SurgicalProcessIdentificationSystem.lib
old/Build_old1011/src/SurgicalProcessIdentificationSystem.dir/Debug/Surgical.26A91706.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SurgicalProcessIdentificationSystem.lastbuildstate  SurgicalProcessIdentificationSystem.write.1u.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
old/Build_old1011/src/SurgicalProcessIdentificationSystem.dir/Release/Surgical.26A91706.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SurgicalProcessIdentificationSystem.write.1u.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
old/Build_old1011/src/temp/: count.csv  temp.csv
old/Build_old1011/x64/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
old/Build_old1011/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: custombuild.write.1.tlog
old/Build_old1011/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.read.1.tlog  custombuild.write.1.tlog
old/Build_old1011/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: custombuild.read.1.tlog
old/Build_old1011/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate
old/origin/Qt_toolBox/: Qt_toolBox.sln
old/origin/Qt_toolBox/Qt_toolBox/: main.cpp  qt_toolbox.cpp  qt_toolbox.h
old/origin/Qt_toolBox/Qt_toolBox/GeneratedFiles/: qrc_qt_toolbox.cpp  ui_qt_toolbox.h
old/origin/Qt_toolBox/Qt_toolBox/GeneratedFiles/Debug/: moc_qt_toolbox.cpp
old/origin/Qt_toolBox/x64/Debug/: Qt_toolBox.ilk
old/src/: CMakeLists.txt  Qt_toolBox.vcxproj  main.cpp  moc_qt_toolbox.cpp  qt_toolbox.cpp  qt_toolbox.h  qt_toolbox.ui  surgicaldetection.h  surgicalposition.h  ui_qt_toolbox.h
(+10 files in other folders)
